<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="50dp"
    android:layout_marginEnd="50dp"
    android:layout_marginTop="50dp"
    android:layout_marginBottom="50dp"
    tools:context=".edit_profile">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtError"
                android:text=""
                android:textColor="#e61025"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtError"/>

            <EditText
                android:id="@+id/edtCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Country"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtName"/>

            <EditText
                android:id="@+id/edtTown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/town"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtCountry"/>

            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtTown"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnSave"
                android:layout_marginTop="20dp"
                android:text="@string/save"
                android:textColor="#ffffff"
                android:onClick="click_save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnCancel"
                app:layout_constraintTop_toBottomOf="@+id/edtPhone"
                android:background="#1054e6"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCancel"
        android:layout_marginTop="20dp"
        android:text="@string/cancel"
        android:textColor="#ffffff"
        android:onClick="click_cancel"
        app:layout_constraintStart_toEndOf="@id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPhone"
        android:background="#1054e6"/>



</android.support.constraint.ConstraintLayout>