<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fbfbfb">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_rectangle"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/txt_admains"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="-5dp"
            android:background="@drawable/header"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/admin"
            android:textColor="#fff"
            android:textSize="12pt" />

        <Button
            android:id="@+id/btn_edit_profil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/style_login"
            android:drawableLeft="@drawable/edit_profile"
            android:padding="10dp"
            android:text="@string/edit_profile"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#fff"
            android:textSize="18sp"
            android:onClick="edit_profile"
            />


        <Button
            android:id="@+id/btn_changepass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/style_login"
            android:drawableLeft="@drawable/change_password"
            android:onClick="chang_pass"
            android:padding="10dp"
            android:text="@string/change_pass"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#fff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/style_login"
            android:drawableLeft="@drawable/change_password"
            android:onClick="btn_logout"
            android:padding="10dp"
            android:text="@string/log_out"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#fff"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>