<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#fbfbfb"
    android:gravity="center"
    tools:context=".log_in">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rectangle"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_login_start"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="-3dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:id="@+id/txtError"
            android:text=""
            android:textColor="#f10c2a"/>

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:drawableLeft="@drawable/user_name_icon"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#000"
            android:textColorHint="#b1adab"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:drawableLeft="@drawable/icon_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#000"
            android:textColorHint="#b1adab"
            android:textSize="15dp" />

        <LinearLayout
            android:id="@+id/liner_rem_forg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/remember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Remember_me"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="#23408e" />

            <TextView
                android:id="@+id/forget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/forget_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="#23408e"
                android:textColorLink="@color/Red"
                android:onClick="click_forget"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/style_login"
            android:onClick="log_in_click"
            android:text="@string/login"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#fff"
            android:textSize="20dp" />
    </LinearLayout>





</RelativeLayout>